solc_ossfuzz_seed_corpus/test_sol/test_ce98833d7d63d42860c6bce5eff990fb2efda819e238c62d1c9ea6a5f5f7b903_cdae3a84fe6d0e3e0224690b657bab13666c69ec_sol.sol
==== Source:  ====

==== Source: su0.sol ====
struct St0 {
  function (bytes1, uint80) external   returns (bytes13) el0;
  address payable el1;
  uint240 el2;
}
pragma solidity >= 0.0.0;
library L0 {
  function f0(uint232 i0,St0 memory i1,int64 i2) external    returns(int8 o0,function (uint128, uint240) internal   o1)
  {
  }
  uint16 public constant cons0 = uint16(65535);
  function f1(function (St0[] memory, bytes16) external   returns (string memory, address, int32) i0) private    returns(bytes memory o0,function () internal   returns (address payable) o1,string memory o2)
  {
    (string memory l0, address l1, int32 l2) = i0(new St0[](1),bytes14(0x0000000000000000000000000000));
  }
  function f2() public    returns(bytes18 o0,int200 o1)
  {
  }
  function f3(uint72 i0,function (bool) external   returns (int192, address) i1) public   
  {
    address payable l0 = payable(address(0x0000000000000000000000000000000000000004));
  }
}
using L0 for uint;
// ----
// TypeError 4103: (su0.sol:231-272): Internal type is not allowed for public or external functions.
